# tim-jones-sdl

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  cAnimation.cpp  cAnimation.hpp  cApp.cpp  cApp.hpp  cAppOnCleanup.cpp  cAppOnEvent.cpp  cAppOnInit.cpp  cAppOnLoop.cpp  cAppOnRender.cpp  cEntity.cpp  cEntity.hpp  cEvent.cpp  cEvent.hpp  cSurface.cpp  cSurface.hpp
